# book-catalog-ms

./: README.md  pyproject.toml
app/: main.py
app/api/: dto.py  routes.py
app/domain/: book.py  catalog.py  memento.py  services.py  undo_manager.py
app/domain/commands/: add_book.py  base.py  import_catalog.py  remove_book.py  update_book.py
app/infrastructure/factories/: format_factory.py
app/infrastructure/formats/: base.py  json_format.py  xml_format.py
book-catalog-ms-API-tests/: Add Book.bru  Delete a Book.bru  Export Catalog (JSON).bru  Export Catalog (XML).bru  Get Book by ISBN.bru  Import Catalog.bru  List Books.bru  Undo.bru  Update Book.bru  bruno.json
fastapi/: __init__.py  status.py  testclient.py
pydantic/: __init__.py
tests/integration/: test_routes.py
tests/unit/: test_catalog_domain.py  test_commands.py  test_memento.py  test_strategies.py
