[tool.poetry]
name = "book-catalog-ms"
version = "0.1.0"
description = "Academic book catalog microservice"
authors = ["AutoGen <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
